<resources>
    <string name="app_name">Meditation App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_login_with_email">OR LOGIN WITH EMAIL</string>
    <string name="login">Login</string>
    <string name="sign_in">SIGN IN?</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="i_have_read_the">I have read the.</string>
    <string name="get_satrted">GET SATRTED</string>
    <string name="get_started">GET STARTED</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="start">Start</string>
    <string name="proceed">PROCEED</string>
    <string name="anxious">Anxious</string>
    <string name="focus">Focus</string>
    <string name="relax">Relax</string>
    <string name="calm">Calm</string>
</resources>