<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/topimage3"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/backarrow"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_your_account"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_with_facebook"
                android:textSize="14sp"
                android:backgroundTint="@color/bluer"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="20dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="12dp"
                app:strokeColor="@color/grey"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:background="@color/white"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/google_icon"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign Up with Facebook"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="12dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with_email"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:padding="12dp"
                android:textColor="#A1A4B2"
                android:textSize="16sp"
                android:background="@drawable/grey_textfield"
                android:layout_margin="16dp" />
            <EditText
                android:id="@+id/TextField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:padding="12dp"
                android:textColor="#A1A4B2"
                android:textSize="16sp"
                android:background="@drawable/grey_textfield"
                android:layout_margin="16dp" />
            <EditText
                android:id="@+id/TextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="12dp"
                android:textColor="#A1A4B2"
                android:textSize="16sp"
                android:background="@drawable/grey_textfield"
                android:layout_margin="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_have_read_the"
                    />

                <TextView
                    android:id="@+id/needHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onNeedHelpClick" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_1"
                    android:layout_marginStart="130dp"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:layout_margin="20dp"
                android:text="@string/get_started"/>
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
