<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/topimage3"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/backarrow"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome Back!"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SIGN UP WITH FACEBOOK"
                android:textSize="14sp"
                android:backgroundTint="@color/bluer"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CONTINUE WITH GOOGLE"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with_email"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>
            <EditText
                android:id="@+id/TextField1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email Address"
                android:padding="12dp"
                android:textColor="#A1A4B2"
                android:textSize="16sp"
                android:background="@drawable/grey_textfield"
                android:layout_margin="16dp" />
            <EditText
                android:id="@+id/TextField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:padding="12dp"
                android:textColor="#A1A4B2"
                android:textSize="16sp"
                android:background="@drawable/grey_textfield"
                android:layout_margin="16dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textV2"
                android:background="@drawable/button"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    />

                <TextView
                    android:id="@+id/needHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onNeedHelpClick" />
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
